tests/neg-custom-args/erased/erased-lazy-val.scala
object Test {
  erased lazy val i: Int // error
}
